# CPlusPlusVSCodeSetup

./: README.md
BasicCmake_VSCode/: CMakeLists.txt  README.md  main.cpp
BasicLinuxCmakeSOLib_VSCode/: CMakeLists.txt  main.cpp  shared.cpp
BasicLinuxTestingCmakeSOLib_VSCode/: CMakeLists.txt
BasicLinuxTestingCmakeSOLib_VSCode/gtests/: CMakeLists.txt  Makefile  tests.cpp
BasicLinuxTestingCmakeSOLib_VSCode/src/: CMakeLists.txt  levenstein_distance.cpp  levenstein_distance.hpp  main.cpp  spell_checker_by_dictionary.cpp  spell_checker_by_dictionary.hpp
BasicMinLinuxCmakeSOLib_VSCode/: CMakeLists.txt  levenstein_distance.cpp  levenstein_distance.hpp  main.cpp
